--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+body{
+    margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.top-pane{
+    background-color:hsl(255,6%,25%);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pane{
+    height: 50vh;
+    display: flex;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.editor-container.collapsed{
+    flex-grow:0;
 }
-
-.App-link {
-  color: #61dafb;
+.editor-container.collapsed .CodeMirror-scroll{
+    position: absolute;
+    overflow: hidden!important;
 }
+.editor-container{
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    flex-direction: column;
+    padding: .5rem;
+    background-color: hsl(255,6%,25%);
+}
+.editor-top{
+    display: flex;
+    justify-content: space-between;
+    background-color: hsl(255,6%,13%);
+    color: blanchedalmond;
+    padding: .5rem .5rem .5rem 1rem;
+    border-top-right-radius: .5rem;
+    border-top-left-radius: .5rem;
+}
+.CodeMirror{
+    height: 100% !important;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.expand-collapse-btn{
+    margin-left: .5rem;
+    background: none;
+    border:none;
+    color:white;
+    cursor: pointer;
+}
+.code-mirror-wrapper{
+    flex-grow: 1;
+    border-top-right-radius: .5rem;
+    border-top-left-radius: .5rem;
 }
